c4prj1_deck/grade.txt
Grading at Sun Mar  7 18:52:19 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:11:4: error: statement with no effect [-Werror=unused-value]
    deck->cards)[deck->n_cards] = &ptr;
    ^
deck.c:11:15: error: expected ‘;’ before ‘)’ token
    deck->cards)[deck->n_cards] = &ptr;
               ^
deck.c:11:15: error: expected statement before ‘)’ token
deck.c:11:16: error: expected expression before ‘[’ token
    deck->cards)[deck->n_cards] = &ptr;
                ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
